Page header component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,6 @@
 <div class="page-content">
-    <section class="page-header">
-        <mat-card color="accent">
-            <mat-card-header>
-                <mat-card-title class="page-title">
-                    <mat-icon>home</mat-icon>
-                    <h2>Home</h2>
-                </mat-card-title>
-            </mat-card-header>
-            <div class="page-description">
-                <p>Home page description</p>
-            </div>
-        </mat-card>
-    </section>
-
+    <app-page-header pageTitle="Home" pageIcon="home" pageDescription="Homepage Description"></app-page-header>
+    
     <section class="cards-section">
         <div class="info-card">
             <mat-card color="accent">
