--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,1 +1,3 @@
-<p>users works!</p>
+<div class="page-content">
+    <app-page-header pageTitle="User" pageIcon="account_box" pageDescription="User page Description"></app-page-header>
+</div>
