info panel component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,77 +1,6 @@
 <div class="page-content">
     <app-page-header pageTitle="Home" pageIcon="home" pageDescription="Homepage Description"></app-page-header>
-    
-    <section class="cards-section">
-        <div class="info-card">
-            <mat-card color="accent">
-                <mat-card-header>
-                    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-                    <mat-card-title>
-                        <mat-icon color="primary">home</mat-icon>
-                    </mat-card-title>
-
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="count"><strong class="t-black">345</strong></div>
-                    <div class="count-text">
-                        <p>Total Orders</p>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-        <div class="info-card">
-            <mat-card color="accent">
-                <mat-card-header>
-                    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-                    <mat-card-title>
-                        <mat-icon color="primary">home</mat-icon>
-                    </mat-card-title>
-
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="count"><strong class="t-black">345</strong></div>
-                    <div class="count-text">
-                        <p>Total Orders</p>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-        <div class="info-card">
-            <mat-card color="accent">
-                <mat-card-header>
-                    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-                    <mat-card-title>
-                        <mat-icon color="primary">home</mat-icon>
-                    </mat-card-title>
-
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="count"><strong class="t-black">345</strong></div>
-                    <div class="count-text">
-                        <p>Total Orders</p>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-        <div class="info-card">
-            <mat-card color="accent">
-                <mat-card-header>
-                    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-                    <mat-card-title>
-                        <mat-icon color="primary">home</mat-icon>
-                    </mat-card-title>
-
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="count"><strong class="t-black">345</strong></div>
-                    <div class="count-text">
-                        <p>Total Orders</p>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-    </section>
-
+<app-info-panel></app-info-panel>
     <section class="blogs-section">
         <mat-card color="accent">
             <mat-card-header>
