Dynamic dashboard count

--- a/src/app/shared/material-card/material-card.component.html
+++ b/src/app/shared/material-card/material-card.component.html
@@ -1,7 +1,7 @@
 <mat-card color="accent">
     <mat-card-header>
         <mat-card-title>
-            <mat-icon [(color)]="this.color">{{cardIcon}}</mat-icon>
+            <mat-icon [color]="this.color">{{cardIcon}}</mat-icon>
             <h2 *ngIf="this.cardTitle">{{cardTitle}}</h2>
         </mat-card-title>
     </mat-card-header>
