--- a/src/app/shared/info-panel/info-panel.component.html
+++ b/src/app/shared/info-panel/info-panel.component.html
@@ -1,9 +1,9 @@
 <section class="cards-section">
     <div class="info-card" *ngFor="let info of infoArry">
-        <app-material-card cardIcon="info.cardIcon" isPrimary="true">
+        <app-material-card [cardIcon]="info.cardIcon" isPrimary="true">
             <div class="count"><strong class="t-black">{{info.count}}</strong></div>
             <div class="count-text">
-                <p>{{info.count-text}}</p>
+                <p>{{info.countText}}</p>
             </div>
         </app-material-card>
     </div>
